# sbeculoos

./: .gitignore  README.md
cookiecutters/cookiecutter-cpp-lib/: README.md  cookiecutter.json
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/: CMakeLists.txt  LICENSE  README.md  cmake_build_and_install.bat
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/docs/: api.rst  conf.py  cpp_api.rst  index.rst  installation.rst  py_api.rst  theory.rst  tutorial.rst
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/example/: CMakelists.txt  README.md  example_{{cookiecutter.project_name}}.cpp
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/include/: CMakeLists.txt
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/include/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.hpp  {{cookiecutter.project_name}}.hpp.in
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/metadata/: author.txt  description.txt  email.txt  repository.txt  version.txt  year.txt
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/python/: setup.cfg  setup.py
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/python/tests/: test_{{cookiecutter.project_pymodule}}.py
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/python/{{cookiecutter.project_pymodule}}/: __init__.py  {{cookiecutter.project_pymodule}}.cpp
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/src/: CMakeLists.txt  Config.cmake.in  {{cookiecutter.project_name}}.cpp
cookiecutters/cookiecutter-cpp-lib/{{cookiecutter.project_name}}/tests/: CMakeLists.txt  test_{{cookiecutter.project_name}}.cpp
cookiecutters/cookiecutter-paper/: cookiecutter.json
(+7 files in other folders)
